--- a/succes.css
+++ b/succes.css
@@ -8,7 +8,13 @@ p {
     font-size: 3em;
     text-align: center;
     color: white;
-    margin-top: 400px;
+    margin-top: 200px;
+}
+
+#buttonContainer {
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
 }
 
 #backButton {
