--- a/index.css
+++ b/index.css
@@ -26,6 +26,10 @@ header, h1 {
     line-height: 80px;
 }
 
+span {
+    font-family: Arial;
+}
+
 #divPatientList {
     padding: 10px;
     overflow-y: scroll;
@@ -41,6 +45,29 @@ header, h1 {
     grid-template-columns: 130px auto;
     grid-template-rows: 1fr;
     box-shadow: 2px 2px 4px lightgrey;
+}
+
+#divName {
+    margin-top: 20px
+}
+
+#divPatientNumber {
+    margin-top: 40px;
+}
+
+#divBirthDate {
+    margin-top: 60px;
+}
+
+.infoContainer {
+    grid-column: 2;
+    grid-row: 1;
+    display: block;
+    height: 40px;
+}
+
+.infoHeader {
+    font-weight: bold;
 }
 
 .patientIcon {
